<resources>
    <string name="app_name">AsturCOVID</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">Acerca de&#8230;</string>

    <string name="menu_title">AsturCOVID</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="SeleccioneArea">Seleccione área sanitaria:</string>
    <string name="descripcionMapa">Mapa de Asturias organizado por áreas sanitarias</string>
    <string name="areaSanitariaJarrio">I - Jarrio</string>
    <string name="areaSanitariaCangas">II - Cangas del Narcea</string>
    <string name="areaSanitariaAviles">III - Avilés</string>
    <string name="areaSanitariaOviedo">IV - Oviedo</string>
    <string name="areaSanitariaGijon">V - Gijón</string>
    <string name="areaSanitariaArriondas">VI - Arriondas</string>
    <string name="areaSanitariaMieres">VII - Mieres</string>
    <string name="areaSanitariaLangreo">VIII - Langreo</string>
    <string name="hospitalsanAgustin">Hospital San Agustín del área sanitaria 3</string>
    <string name="hospital">Hospital</string>
    <string name="ubicacion">Ubicación</string>
    <string name="telefono">Teléfono</string>
    <string name="estadisticas">Estadísticas COVID-19</string>
    <string name="numeroDeCasosTotal">Número de casos totales:</string>
    <string name="numeroDeCasosHoy">Número de casos hoy:</string>
    <string name="action_settings">Ajustes</string>
    <string name="settingsPreferencesCategory">Preferencias</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="mapa_tabitem">Mapa</string>
    <string name="lista_tabitem">Lista Áreas</string>
    <string name="nombreAreaSanitaria">Área Sanitaria</string>
    <string name="numeroAreaSanitaria">Número de Área Sanitaria</string>
    <string name="ayuda">ayuda</string>
    <string name="visitarWeb">Visitar Web</string>
    <string name="Areas_sanitarias">Áreas Sanitarias</string>
    <string name="Asturias">Asturias</string>
    <string name="España">España</string>
    <string name="AsturCovid">AsturCOVID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fecha">24/12/2020</string>
    <string name="datos">Datos</string>
    <string name="numero_contagios">341</string>
    <string name="numero_fallecidos">212</string>
    <string name="pulsar_datos">Pulse en un día para más información:</string>
    <string name="numero_hospitalizados">34</string>
    <string name="numero_recuperados">286</string>
    <string name="fuente_datos">Fuente: API COVID-19 Narrativa</string>
    <string name="numero_uci">17</string>
    <string name="numero_casos_abiertos">321</string>
</resources>