<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_asturias">

    <fragment
        android:id="@+id/nav_areas"
        android:name="es.uniovi.eii.asturcovid.ui.areas.AreasFragment"
        android:label="@string/Areas_sanitarias"
        tools:layout="@layout/fragment_areas" />

    <fragment
        android:id="@+id/nav_asturias"
        android:name="es.uniovi.eii.asturcovid.ui.asturias.AsturiasFragment"
        android:label="@string/Asturias"
        tools:layout="@layout/fragment_asturias" />

    <fragment
        android:id="@+id/nav_españa"
        android:name="es.uniovi.eii.asturcovid.ui.espana.EspanaFragment"
        android:label="@string/España"
        tools:layout="@layout/fragment_espana" />
</navigation>