<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AreaSanitariaActivity"
    tools:showIn="@layout/activity_area_sanitaria">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/text_margin">

        <TextView
            android:id="@+id/hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/hospital"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/ubicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:drawableStart="@android:drawable/ic_menu_mylocation"
            android:gravity="center"
            android:padding="8sp"
            android:text="@string/ubicacion"
            android:textSize="18sp"
            android:drawablePadding="10sp"
            android:layout_marginTop="10sp"
            />

        <TextView
            android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:drawableStart="@android:drawable/sym_action_call"
            android:padding="8sp"
            android:text="@string/telefono"
            android:textSize="18sp"
            android:drawablePadding="10sp"
            android:layout_marginTop="10sp"/>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10sp"
            />


        <TextView
            android:id="@+id/estadisticas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/estadisticas"
            android:textSize="30sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10sp">

            <TextView
                android:id="@+id/txtNumeroCasosTotales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/numeroDeCasosTotal"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/numeroCasosTotales"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="25812"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10sp">

            <TextView
                android:id="@+id/txtNumeroCasosHoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/numeroDeCasosHoy"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/numeroCasosHoy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="400"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtDatosActualizados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtDatosActualizados"
            android:textSize="16sp"
            android:paddingTop="30dp"
            android:textStyle="italic" />





    </LinearLayout>

</androidx.core.widget.NestedScrollView>