<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosAPIFragment">

    <LinearLayout
        android:id="@+id/id_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/id_confirmados_icono_api"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                tools:src="@drawable/contagios_icono" />

            <TextView
                android:id="@+id/id_confirmados_texto_api"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="left"
                android:text="@string/numero_contagios"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/id_fallecidos_icono_api"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                tools:src="@drawable/fallecidos_icono" />

            <TextView
                android:id="@+id/id_fallecidos_texto_api"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="left"
                android:text="@string/numero_fallecidos"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/id_hospitalizados_icono_api"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                tools:src="@drawable/hospital_icono" />

            <TextView
                android:id="@+id/id_hospitalizados_texto_api"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="left"
                android:text="@string/numero_hospitalizados"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/id_recuperados_icono_api"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                tools:src="@drawable/recuperados_icono" />

            <TextView
                android:id="@+id/id_recuperados_texto_api"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="left"
                android:text="@string/numero_recuperados"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/id_uci_icono_api"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                tools:src="@drawable/uci_icono" />

            <TextView
                android:id="@+id/id_uci_texto_api"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="left"
                android:text="@string/numero_uci"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/id_casos_abiertos_icono_api"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                tools:src="@drawable/icono_casosabiertos" />

            <TextView
                android:id="@+id/id_casos_abiertos_texto_api"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="left"
                android:text="Casos abiertos: 2324"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>